--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
     "react-router": "^3.0.0",
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
+    "redux-persist": "^5.10.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.20.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.20.0",
